--- a/www/static/www/weavescope-topolog-src/app/styles/nodeStyle.css
+++ b/www/static/www/weavescope-topolog-src/app/styles/nodeStyle.css
@@ -1,5 +1,5 @@
 svg {
-  background-color: #FFF;
+  /* background-color: #FFF; */
   cursor: default;
   -webkit-user-select: none;
   -moz-user-select: none;
